--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Ma page GitHub</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SAGEC</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f2f2f2;
+      color: #333;
+    }
+    header {
+      background-color: #004466;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+    }
+    footer {
+      background-color: #004466;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Bienvenue sur ma page GitHub Pages !</h1>
+  <header>
+    <h1>SAGEC</h1>
+    <p>Spécialiste en plomberie, chauffage, et rénovation sanitaire</p>
+  </header>
+  <section>
+    <h2>Nos services</h2>
+    <ul>
+      <li>Installation de plomberie</li>
+      <li>Rénovation de salles de bain</li>
+      <li>Chauffage central et entretien</li>
+    </ul>
+    <h2>Contact</h2>
+    <p>Email : contact@sagec.fr</p>
+    <p>Téléphone : 01 23 45 67 89</p>
+  </section>
+  <footer>
+    <p>&copy; 2025 SAGEC. Tous droits réservés.</p>
+  </footer>
 </body>
 </html>
